include/xslp.h

typedef struct tagXSLPproblem *XSLPprob;
 
int XSLP_CC XSLPaddcoefs( XSLPprob Prob, int nSLPCoef, const int * RowIndex, const int * ColIndex, const double * Factor, const int * FormulaStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPaddcvars( XSLPprob Prob, int nSLPCVar, const char * cValue);
 
int XSLP_CC XSLPadddcs( XSLPprob Prob, int nSLPDC, const int * RowIndex, const int * Delay, const int * DCStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPaddivfs( XSLPprob Prob, int nIVF, const int * ColIndex, const int * IVFStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPaddnames( XSLPprob Prob, int type, const char * cNames, int First, int Last);
 
int XSLP_CC XSLPaddtolsets( XSLPprob Prob, int nSLPTol, const double * SLPTol);
 
int XSLP_CC XSLPadduserfuncs( XSLPprob Prob, int nSLPUserFunc, const int * Type, const double * Value);
 
int XSLP_CC XSLPaddvars( XSLPprob Prob, int nSLPVar, const int * ColIndex, const int * VarType, const int * DetRow, const int * SeqNum, const int * TolIndex, const double * InitValue, const double * StepBound);
 
int XSLP_CC XSLPaddxvs( XSLPprob Prob, int nSLPXV, const int * XVStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPcascadeorder( XSLPprob Prob);
 
int XSLP_CC XSLPchgccoef( XSLPprob Prob, int RowIndex, int ColIndex, const double * Factor, const char * Formula);
 
int XSLP_CC XSLPchgcoef( XSLPprob Prob, int RowIndex, int ColIndex, const double * Factor, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPchgcvar( XSLPprob Prob, int nSLPCVar, const char * cValue);
 
int XSLP_CC XSLPchgdc( XSLPprob Prob, int RowIndex, const char * RowType, const int * Delay, const int * IterCount, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPchgivf( XSLPprob Prob, int ColIndex, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPchgrow( XSLPprob Prob, int RowIndex, int * Status);
 
int XSLP_CC XSLPchgtolset( XSLPprob Prob, int nSLPTol, const int * Status, const double * Tols);
 
int XSLP_CC XSLPchguserfunc( XSLPprob Prob, int nSLPUserFunc, const char * xName, const int * ArgType, const int * ExeType, const char * Param1, const char * Param2, const char * Param3);
 
int XSLP_CC XSLPchguserfuncaddress( XSLPprob Prob, int FuncNumber, void ** Address);
 
int XSLP_CC XSLPchgvar( XSLPprob Prob, int ColIndex, const int * DetRow, const double * InitStepBound, const double * StepBound, const double * Penalty, const double * Damp, const double * InitValue, const double * Value, const int * TolSet, const int * History, const int * Converged, const int * VarType);
 
int XSLP_CC XSLPchgxv( XSLPprob Prob, int nXSLPXV, const int * nXVitems);
 
int XSLP_CC XSLPchgxvitem( XSLPprob Prob, int nSLPXV, int nXVitem, int Parsed, const int * VarType, const int * VarIndex, const int * IntIndex, const double * Delta1, const double * Delta2, const int * Status, const int * Type, const double * Value);
 
int XSLP_CC XSLPevaluatecoef( XSLPprob Prob, int RowIndex, int ColIndex, double * dValue);
 
int XSLP_CC XSLPevaluateformula( XSLPprob Prob, int Parsed, const int * Type, const double * Value, double * dValue);
 
int XSLP_CC XSLPgetccoef( XSLPprob Prob, int RowIndex, int ColIndex, double * Factor, char * Formula, int fLen);
 
int XSLP_CC XSLPgetcoef( XSLPprob Prob, int RowIndex, int ColIndex, double * Factor, int Parsed, int * Type, double * Value);
 
int XSLP_CC XSLPgetdc( XSLPprob Prob, int RowIndex, char * RowType, int * Delay, int * IterCount, int Parsed, int * Type, double * Value);
 
int XSLP_CC XSLPgetindex( XSLPprob Prob, int Type, const char * Name, int * SeqNo);
 
int XSLP_CC XSLPgetivf( XSLPprob Prob, int ColIndex, int Parsed, int * Type, double * Value);
 
int XSLP_CC XSLPgetrow( XSLPprob Prob, int RowIndex, int * Status);
 
int XSLP_CC XSLPgettolset( XSLPprob Prob, int nSLPTol, int * Status, double * Tols);
 
int XSLP_CC XSLPgetuserfuncaddress( XSLPprob Prob, int FuncNumber, void ** Address);
 
int XSLP_CC XSLPgetvar( XSLPprob Prob, int ColIndex, int * DetRow, double * InitStepBound, double * StepBound, double * Penalty, double * Damp, double * InitValue, double * Value, int * TolSet, int * History, int * Converged, int * VarType, int * Delta, int * PenaltyDelta, int * UpdateRow, double * OldValue);
 
int XSLP_CC XSLPgetxv( XSLPprob Prob, int nXSLPXV, int * nXVitems);
 
int XSLP_CC XSLPgetxvitem( XSLPprob Prob, int nSLPXV, int nXVitem, int Parsed, int * VarType, int * VarIndex, int * IntIndex, double * Delta1, double * Delta2, int * Status, int * Type, double * Value);
 
int XSLP_CC XSLPloadcoefs( XSLPprob Prob, int nSLPCoef, const int * RowIndex, const int * ColIndex, const double * Factor, const int * FormulaStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPloadcvars( XSLPprob Prob, int nSLPCVar, const char * cValue);
 
int XSLP_CC XSLPloaddcs( XSLPprob Prob, int nSLPDC, const int * RowIndex, const int * Delay, const int * DCStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPloadivfs( XSLPprob Prob, int nIVF, const int * ColIndex, const int * IVFStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPloadtolsets( XSLPprob Prob, int nSLPTol, const double * SLPTol);
 
int XSLP_CC XSLPloaduserfuncs( XSLPprob Prob, int nSLPUserFunc, const int * Type, const double * Value);
 
int XSLP_CC XSLPloadvars( XSLPprob Prob, int nSLPVar, const int * ColIndex, const int * VarType, const int * DetRow, const int * SeqNum, const int * TolIndex, const double * InitValue, const double * StepBound);
 
int XSLP_CC XSLPloadxvs( XSLPprob Prob, int nSLPXV, const int * XVStart, int Parsed, const int * Type, const double * Value);
 
int XSLP_CC XSLPparsecformula( XSLPprob Prob, const char * Formula, int * nToken, int * Type, double * Value);
 
int XSLP_CC XSLPparseformula( XSLPprob Prob, const int * inType, const double * inValue, int * nToken, int * Type, double * Value);
 
int XSLP_CC XSLPqparse( const char * Record, char ** Token, int NumFields);
 
int XSLP_CC XSLPscaling( XSLPprob Prob);
 
int XSLP_CC XSLPsetuniqueprefix( XSLPprob Prob);
 
int XSLP_CC XSLPsetuserfuncaddress( XSLPprob Prob, int FuncNumber, void * Address);
 
int XSLP_CC XSLPtokencount( const char * Record);