include/xslp.bas


'****************************************************************************
' Problem manipulation
'****************************************************************************
Declare Function XSLPaddcvars Lib "xslp" Alias "_XSLPaddcvars@12" (ByVal Prob As Long, ByVal nSLPCVar As Long, ByVal cValue As String) As Long
Declare Function XSLPchgcvar Lib "xslp" Alias "_XSLPchgcvar@12" (ByVal Prob As Long, ByVal nSLPCVar As Long, ByVal cValue As String) As Long
Declare Function XSLPaddnames Lib "xslp" Alias "_XSLPaddnames@20" (ByVal Prob As Long, ByVal theType As Long, ByVal cnames As String, ByVal first As Long, ByVal last As Long) As Long
Declare Function XSLPloadcvars Lib "xslp" Alias "_XSLPloadcvars@12" (ByVal Prob As Long, ByVal nSLPCVar As Long, ByVal cValue As String) As Long
Declare Function XSLPloaduserfuncs Lib "xslp" Alias "_XSLPloaduserfuncs@16" (ByVal Prob As Long, ByVal nSLPUserFunc As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPadduserfuncs Lib "xslp" Alias "_XSLPadduserfuncs@16" (ByVal Prob As Long, ByVal nSLPUserFunc As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPchguserfunc Lib "xslp" Alias "_XSLPchguserfunc@32" (ByVal Prob As Long, ByVal nSLPUserFunc As Long, ByVal xName As String, ByRef argtype As Long, ByRef exetype As Long, ByVal param1 As String, ByVal param2 As String, ByVal param3 As String) As Long
Declare Function XSLPloadxvs Lib "xslp" Alias "_XSLPloadxvs@24" (ByVal Prob As Long, ByVal nSLPXV As Long, ByRef XVStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPaddxvs Lib "xslp" Alias "_XSLPaddxvs@24" (ByVal Prob As Long, ByVal nSLPXV As Long, ByRef XVStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPconstructxf Lib "xslp" Alias "_XSLPconstructxf@4" (ByVal Prob As Long) As Long
Declare Function XSLPchgdc Lib "xslp" Alias "_XSLPchgdc@32" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal rowtype As String, ByRef Delay As Long, ByRef IterCount As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPgetdc Lib "xslp" Alias "_XSLPgetdc@32" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal rowtype As String, ByRef Delay As Long, ByRef IterCount As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPevaluateformula Lib "xslp" Alias "_XSLPevaluateformula@20" (ByVal Prob As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Long, ByRef dValue As Double) As Long
Declare Function XSLPgetvar Lib "xslp" Alias "_XSLPgetvar@68" (ByVal Prob As Long, ByVal ColIndex As Long, ByRef DetRow As Long, ByRef InitStepBound As Double, ByRef StepBound As Double, ByRef Penalty As Double, ByRef Damp As Double, ByRef InitValue As Double, ByRef Value As Double, ByRef TolSet As Long, ByRef History As Long, ByRef Converged As Long, ByRef VarType As Long, ByRef Delta As Long, ByRef PenaltyDelta As Long, ByRef UpdateRow As Long, ByRef OldValue As Double) As Long
Declare Function XSLPchgvar Lib "xslp" Alias "_XSLPchgvar@52" (ByVal Prob As Long, ByVal ColIndex As Long, ByRef DetRow As Long, ByRef InitStepBound As Double, ByRef StepBound As Double, ByRef Penalty As Double, ByRef Damp As Double, ByRef InitValue As Double, ByRef Value As Double, ByRef TolSet As Long, ByRef History As Long, ByRef Converged As Long, ByRef VarType As Long) As Long
Declare Function XSLPsetuniqueprefix Lib "xslp" Alias "_XSLPsetuniqueprefix@4" (ByVal Prob As Long) As Long
Declare Function XSLPgetuserfuncaddress Lib "xslp" Alias "_XSLPgetuserfuncaddress@12" (ByVal Prob As Long, ByVal FuncNumber As Long, ByRef Address As Long) As Long
Declare Function XSLPchguserfuncaddress Lib "xslp" Alias "_XSLPchguserfuncaddress@12" (ByVal Prob As Long, ByVal FuncNumber As Long, ByRef Address As Long) As Long
Declare Function XSLPsetuserfuncaddress Lib "xslp" Alias "_XSLPsetuserfuncaddress@12" (ByVal Prob As Long, ByVal FuncNumber As Long, ByVal Address As Long) As Long
Declare Function XSLPgetindex Lib "xslp" Alias "_XSLPgetindex@16" (ByVal Prob As Long, ByVal theType As Long, ByVal Name As String, ByRef SeqNo As Long) As Long
Declare Function XSLPgetrow Lib "xslp" Alias "_XSLPgetrow@12" (ByVal Prob As Long, ByVal RowIndex As Long, ByRef Status As Long) As Long
Declare Function XSLPchgrow Lib "xslp" Alias "_XSLPchgrow@12" (ByVal Prob As Long, ByVal RowIndex As Long, ByRef Status As Long) As Long
Declare Function XSLPgetxv Lib "xslp" Alias "_XSLPgetxv@12" (ByVal Prob As Long, ByVal nXSLPXV As Long, ByRef nXVitems As Long) As Long
Declare Function XSLPchgxv Lib "xslp" Alias "_XSLPchgxv@12" (ByVal Prob As Long, ByVal nXSLPXV As Long, ByRef nXVitems As Long) As Long
Declare Function XSLPgetxvitem Lib "xslp" Alias "_XSLPgetxvitem@48" (ByVal Prob As Long, ByVal SLPXV As Long, ByVal nXVitem As Long, ByVal Parsed As Long, ByRef VarType As Long, ByRef VarIndex As Long, ByRef IntIndex As Long, ByRef Delta1 As Double, ByRef Delta2 As Double, ByRef Status As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPchgxvitem Lib "xslp" Alias "_XSLPchgxvitem@48" (ByVal Prob As Long, ByVal nSLPXV As Long, ByVal nXVitem As Long, ByVal Parsed As Long, ByRef VarType As Long, ByRef VarIndex As Long, ByRef IntIndex As Long, ByRef Delta1 As Double, ByRef Delta2 As Double, ByRef Status As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPloadcoefs Lib "xslp" Alias "_XSLPloadcoefs@36" (ByVal Prob As Long, ByVal nSLPCoef As Long, ByRef RowIndex As Long, ByRef ColIndex As Long, ByRef Factor As Double, ByRef FormulaStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPaddcoefs Lib "xslp" Alias "_XSLPaddcoefs@36" (ByVal Prob As Long, ByVal nSLPCoef As Long, ByRef RowIndex As Long, ByRef ColIndex As Long, ByRef Factor As Double, ByRef FormulaStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPloadvars Lib "xslp" Alias "_XSLPloadvars@36" (ByVal Prob As Long, ByVal nSLPVar As Long, ByRef ColIndex As Long, ByRef VarType As Long, ByRef DetRow As Long, ByRef SeqNum As Long, ByRef TolIndex As Long, ByRef InitValue As Double, ByRef StepBound As Double) As Long
Declare Function XSLPaddvars Lib "xslp" Alias "_XSLPaddvars@36" (ByVal Prob As Long, ByVal nSLPVar As Long, ByRef ColIndex As Long, ByRef VarType As Long, ByRef DetRow As Long, ByRef SeqNum As Long, ByRef TolIndex As Long, ByRef InitValue As Double, ByRef StepBound As Double) As Long
Declare Function XSLPloaddcs Lib "xslp" Alias "_XSLPloaddcs@32" (ByVal Prob As Long, ByVal nSLPDC As Long, ByRef RowIndex As Long, ByRef Delay As Long, ByRef DCStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPadddcs Lib "xslp" Alias "_XSLPadddcs@32" (ByVal Prob As Long, ByVal nSLPDC As Long, ByRef RowIndex As Long, ByRef Delay As Long, ByRef DCStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPloadtolsets Lib "xslp" Alias "_XSLPloadtolsets@12" (ByVal Prob As Long, ByVal nSLPTol, ByRef SLPTol As Double) As Long
Declare Function XSLPaddtolsets Lib "xslp" Alias "_XSLPaddtolsets@12" (ByVal Prob As Long, ByVal nSLPTol, ByRef SLPTol As Double) As Long
Declare Function XSLPparsecformula Lib "xslp" Alias "_XSLPparsecformula@20" (ByVal Prob As Long, ByVal Formula As String, ByRef nToken As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPparseformula Lib "xslp" Alias "_XSLPparseformula@24" (ByVal Prob As Long, ByRef inType As Long, ByRef inValue As Double, ByRef nToken, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPchgcoef Lib "xslp" Alias "_XSLPchgcoef28@" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal ColIndex As Long, ByRef Factor As Double, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPchgccoef Lib "xslp" Alias "_XSLPchgccoef@20" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal ColIndex As Long, ByRef Factor As Double, ByVal Formula As String) As Long
Declare Function XSLPgetccoef Lib "xslp" Alias "_XSLPgetccoef@24" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal ColIndex As Long, ByRef Factor As Double, ByVal Formula As String, ByVal fLen As Long) As Long
Declare Function XSLPgetcoef Lib "xslp" Alias "_XSLPgetcoef@28" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal ColIndex As Long, ByRef Factor As Double, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPqparse Lib "xslp" Alias "_XSLPqparse@12" (ByVal Record As String, ByRef Token As Byte, ByVal NumFields As Long) As Long
Declare Function XSLPtokencount Lib "xslp" Alias "_XSLPtokencount@4" (ByVal Record As String) As Long
Declare Function XSLPchgtolset Lib "xslp" Alias "_XSLPchgtolset@16" (ByVal Prob As Long, ByVal nSLPTol As Long, ByRef Status As Long, ByRef Tols As Double) As Long
Declare Function XSLPgettolset Lib "xslp" Alias "_XSLPgettolset@16" (ByVal Prob As Long, ByVal nSLPTol As Long, ByRef Status As Long, ByRef Tols As Double) As Long
Declare Function XSLPevaluatecoef Lib "xslp" Alias "_XSLPevaluatecoef@16" (ByVal Prob As Long, ByVal RowIndex As Long, ByVal ColIndex As Long, ByRef dValue As Long) As Long
Declare Function XSLPcascadeorder Lib "xslp" Alias "_XSLPcascadeorder@4" (ByVal Prob As Long) As Long
Declare Function XSLPscaling Lib "xslp" Alias "_XSLPscaling@4" (ByVal Prob As Long) As Long
Declare Function XSLPloadivfs Lib "xslp" Alias "_XSLPloadivfs@28" (ByVal Prob As Long, ByVal nIVF As Long, ByRef ColIndex As Long, ByRef IVFStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPaddivfs Lib "xslp" Alias "_XSLPaddivfs@28" (ByVal Prob As Long, ByVal nIVF As Long, ByRef ColIndex As Long, ByRef IVFStart As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPgetivf Lib "xslp" Alias "_XSLPgetivf@20" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long
Declare Function XSLPchgivf Lib "xslp" Alias "_XSLPchgivf@20" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal Parsed As Long, ByRef theType As Long, ByRef Value As Double) As Long

Declare Function XSLPloadpvs Lib "xslp" Alias "_XSLPloadpvs@20" (ByVal Prob As Long, ByVal nSLPPV As Long, ByRef Index As Long, ByRef Value As Double, ByRef Priority As Double) As Long
Declare Function XSLPaddpvs Lib "xslp" Alias "_XSLPaddpvs@20" (ByVal Prob As Long, ByVal nSLPPV As Long, ByRef Index As Long, ByRef Value As Double, ByRef Priority As Double) As Long
Declare Function XSLPgetmpv Lib "xslp" Alias "_XSLPgetmpv@24" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal Space As Long, ByRef nItem As Long, ByRef Value As Double, ByRef Priority As Double) As Long
Declare Function XSLPchgmpv Lib "xslp" Alias "_XSLPchgmpv@20" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal nItem As Long, ByRef Value As Double, ByRef Priority As Double) As Long
Declare Function XSLPgetintpvinfo  Lib "xslp" Alias "_XSLPgetpvinfo@16" (ByVal Prob As Long, ByVal theType As Long, ByRef Value As Long, ByVal FileName As String)
Declare Function XSLPgetdblpvinfo  Lib "xslp" Alias "_XSLPgetpvinfo@16" (ByVal Prob As Long, ByVal theType As Long, ByRef Value As Double, ByVal FileName As String)
Declare Function XSLPgetpvvalues  Lib "xslp" Alias "_XSLPgetpvvalues@24" (ByVal Prob As Long, ByVal First As Long, ByVal Last As Long, ByRef Values As Double, ByRef Parents As Long, ByVal FileName As String)
